# AndroidOpenssl

./: README.md
MyApplication2/app/: build.gradle
MyApplication2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
MyApplication2/app/src/main/java/com/liu/myapplication/: MainActivity.java
MyApplication2/gradle/wrapper/: gradle-wrapper.properties
